--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,9 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
+    - name: Download files from Google Drive
+      run: |
+        curl -L -o best_model.pth "https://www.dropbox.com/scl/fi/43fdw0dz87r1c1byfdqda/best_model.pth?rlkey=6fhuxvn0iv5gndxsd9qpoinu1&st=purmmwcu&dl=0"
     - name: 1. Creating virtual env
       uses: actions/setup-python@v4
       with:
