--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
 
     - name: Download files from Google Drive
       run: |
-        curl -L -o best_model.pth "https://www.dropbox.com/scl/fi/j8lsl52vbcys8d5pa3by8/model-1.pth?rlkey=quceuykqnxwbcv9p7lnndkggh&st=5qy3nxt0&dl=0"
+        curl -L -o best_model.pth "https://www.dropbox.com/scl/fi/43fdw0dz87r1c1byfdqda/best_model.pth?rlkey=6fhuxvn0iv5gndxsd9qpoinu1&st=d66prkpq&dl=0"
     - name: 1. Creating virtual env
       uses: actions/setup-python@v4
       with:
